--- a/app/src/main/res/layout/activity_profil.xml
+++ b/app/src/main/res/layout/activity_profil.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".Profil">
 
-    <include layout="@layout/toolbar_3" />
+    <include
+        android:id="@+id/toolbar_top"
+        layout="@layout/toolbar_3" />
 
     <include
         android:id="@+id/toolbar"
