--- a/app/src/main/res/layout/activity_anmeldung_1.xml
+++ b/app/src/main/res/layout/activity_anmeldung_1.xml
@@ -7,11 +7,19 @@
     tools:context=".MainActivity">
 
 
-    <include layout="@layout/toolbar_1"/>
+    <include
+        android:id="@+id/include28"
+        layout="@layout/toolbar_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         android:id="@+id/include26"
-        layout="@layout/toolbar_bottom" />
+        layout="@layout/toolbar_bottom"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include28" />
 
     <TextView
         android:id="@+id/textView6"
@@ -128,6 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:onClick="toRegister"
             android:text="Registrieren"
             android:textColor="#2196F3" />
 
