--- a/app/src/main/res/layout/activity_hilfe.xml
+++ b/app/src/main/res/layout/activity_hilfe.xml
@@ -6,11 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".Hilfe">
 
-    <include layout="@layout/toolbar_3" />
+    <include
+        android:id="@+id/include27"
+        layout="@layout/toolbar_3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar_bottom" />
+        layout="@layout/toolbar_bottom"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include27" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +28,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include18">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <TextView
             android:id="@+id/textView30"
@@ -77,8 +85,9 @@
 
         <Button
             android:id="@+id/button11"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:onClick="toKontakt"
             android:text="zum Kontaktformular"
             android:textAllCaps="false" />
