--- a/app/src/main/res/layout/activity_registrierung_1.xml
+++ b/app/src/main/res/layout/activity_registrierung_1.xml
@@ -4,24 +4,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <include layout="@layout/toolbar_1" />
 
     <include
-        android:id="@+id/include25"
-        layout="@layout/toolbar_bottom" />
+        android:id="@+id/registrierung_toolbar1"
+        layout="@layout/toolbar_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+<include
+    layout="@layout/toolbar_bottom"/>
+<!--    <androidx.appcompat.widget.Toolbar-->
+<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--        xmlns:tools="http://schemas.android.com/tools"-->
+<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--        android:id="@+id/start_seite_toolbar5"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="60dp"-->
+<!--        android:background="@android:color/darker_gray"-->
+<!--        android:minHeight="?attr/actionBarSize"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:theme="@style/ToolbarColoredBackArrow"-->
+<!--        app:titleTextColor="@android:color/white">-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/imageViewRegister"-->
+<!--                android:layout_width="61dp"-->
+<!--                android:layout_height="44dp"-->
+<!--                app:srcCompat="@drawable/ic_menu_button"-->
+<!--                tools:layout_editor_absoluteX="411dp"-->
+<!--                tools:layout_editor_absoluteY="58dp" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/hilfe"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_gravity="end"-->
+<!--                android:background="@android:color/transparent"-->
+<!--                android:text="Hilfe"-->
+<!--                android:textAllCaps="false"-->
+<!--                android:textColor="@android:color/white"-->
+<!--                tools:layout_editor_absoluteX="82dp"-->
+<!--                tools:layout_editor_absoluteY="4dp" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/profilRegister"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="end"-->
+<!--                android:text="|"-->
+<!--                android:textColor="@android:color/white"-->
+<!--                android:textSize="20sp"-->
+<!--                tools:layout_editor_absoluteX="320dp"-->
+<!--                tools:layout_editor_absoluteY="18dp" />-->
+
+<!--            <Button-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_gravity="end"-->
+<!--                android:background="@android:color/transparent"-->
+<!--                android:text="Profil"-->
+<!--                android:textAllCaps="false"-->
+<!--                android:textColor="@android:color/white"-->
+<!--                tools:layout_editor_absoluteX="82dp"-->
+<!--                tools:layout_editor_absoluteY="4dp" />-->
+<!--    </androidx.appcompat.widget.Toolbar>-->
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="236dp"
         android:layout_height="308dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="85dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include25">
+        app:layout_constraintTop_toBottomOf="@+id/start_seite_toolbar5">
 
         <TextView
             android:id="@+id/textView10"
@@ -96,15 +158,6 @@
             android:text="Oder Anmelden mit:"
             android:textColor="@color/black" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
-            android:background="@color/white"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -126,6 +179,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:onClick="toRegistrieren"
             android:text="Registrieren"
             android:textColor="#2196F3" />
 
@@ -134,6 +188,7 @@
             android:layout_width="68dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:onClick="abbrechen"
             android:text="Abbrechen"
             android:textColor="#2196F3" />
 
@@ -142,6 +197,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:onClick="toDatenschutz"
             android:text="Datenschutz"
             android:textColor="#2196F3" />
     </LinearLayout>
