--- a/app/src/main/res/layout/toolbar_1.xml
+++ b/app/src/main/res/layout/toolbar_1.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/toolbar4"
+        android:id="@+id/toolbar1"
         android:layout_width="409dp"
         android:layout_height="60dp"
         android:background="@color/white"
@@ -43,14 +43,14 @@
             app:srcCompat="@mipmap/ic_refresh_button_black" />
 
         <TextView
-            android:id="@+id/toolbar3_textview"
+            android:id="@+id/toolbar1_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="90dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="82dp"
             android:layout_marginBottom="5dp"
-            android:text="TextView"
+            android:text="App-Name"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
