--- a/app/src/main/res/layout/toolbar_3.xml
+++ b/app/src/main/res/layout/toolbar_3.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/toolbar4"
+        android:id="@+id/toolbar_3"
         android:layout_width="409dp"
         android:layout_height="60dp"
         android:background="@color/white"
@@ -24,6 +24,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="7dp"
+            android:onClick="back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -53,14 +54,14 @@
             app:srcCompat="@mipmap/ic_refresh_button_black" />
 
         <TextView
-            android:id="@+id/toolbar3_textview"
+            android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="102dp"
             android:layout_marginBottom="12dp"
-            android:text="TextView"
+            android:text="App-Name"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
