--- a/app/src/main/res/layout/activity_notfallkontakt.xml
+++ b/app/src/main/res/layout/activity_notfallkontakt.xml
@@ -9,53 +9,63 @@
         android:id="@+id/include21"
         layout="@layout/toolbar_3" />
 
-
-    <TextView
-        android:id="@+id/textView69"
-        android:layout_width="336dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="20dp"
-        android:text="Reden sie mit jemandem über Ihre Gedanken und Gefhle!"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView68" />
-
-    <TextView
-        android:id="@+id/textView72"
-        android:layout_width="336dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="29dp"
-        android:text="Tel: 12345678 (Englischer Service) usw."
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView70" />
-
-    <TextView
-        android:id="@+id/textView70"
+    <LinearLayout
         android:layout_width="335dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="20dp"
-        android:text="International Helpline Berlin"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView72"
+        android:layout_height="492dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView69"
-        app:layout_constraintVertical_bias="0.676" />
+        app:layout_constraintTop_toBottomOf="@+id/include21"
+        app:layout_constraintVertical_bias="0.391">
 
-    <TextView
-        android:id="@+id/textView68"
-        android:layout_width="336dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="104dp"
-        android:text="Hier wurde ein kurzer Text zur Einführung der folgenden Daten stehen."
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include21" />
+        <TextView
+            android:id="@+id/textView67"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:text="Hier wurde ein kurzer Text zur Einführung der folgenden Daten stehen."
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/include21" />
+
+        <TextView
+            android:id="@+id/textView89"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginTop="20dp"
+            android:text="Reden sie mit jemandem über Ihre Gedanken und Gefhle!"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView68" />
+
+        <TextView
+            android:id="@+id/textView98"
+            android:layout_width="match_parent"
+            android:layout_height="26dp"
+            android:layout_marginTop="20dp"
+            android:text="International Helpline Berlin"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/textView72"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.486"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView69"
+            app:layout_constraintVertical_bias="0.676" />
+
+        <TextView
+            android:id="@+id/textView99"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginTop="29dp"
+            android:text="Tel: 12345678 (Englischer Service) usw."
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView70" />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
