--- a/app/src/main/res/layout/activity_ubungen_2.xml
+++ b/app/src/main/res/layout/activity_ubungen_2.xml
@@ -5,164 +5,230 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TableRow
+        android:layout_width="336dp"
+        android:layout_height="42dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView75">
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="155dp"
+            android:layout_height="45dp"
+            android:text="Übungsname"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@+id/textView73"
+            app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+        <CheckBox
+            android:id="@+id/checkBox1"
+            android:layout_width="155dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="0dp"
+            android:text="Übungsname"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@+id/textView73"
+            app:layout_constraintTop_toBottomOf="@+id/textView73" />
+    </TableRow>
+
     <include layout="@layout/toolbar_3" />
 
     <include
         android:id="@+id/include15"
-        layout="@layout/toolbar_bottom" />
-    <CheckBox
-        android:id="@+id/checkBox7"
-        android:layout_width="155dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="20dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/textView73"
-        app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-    <CheckBox
-        android:id="@+id/checkBox9"
-        android:layout_width="158dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="8dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/checkBox7"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/checkBox7"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox7" />
-
-    <CheckBox
-        android:id="@+id/checkBox3"
-        android:layout_width="156dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="8dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/checkBox4"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
-
-    <CheckBox
-        android:id="@+id/checkBox11"
-        android:layout_width="156dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="60dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/checkBox4"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
-
-    <CheckBox
-        android:id="@+id/checkBox12"
-        android:layout_width="156dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="64dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/checkBox4"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
-
-    <CheckBox
-        android:id="@+id/checkBox4"
-        android:layout_width="155dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/checkBox5"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />
-
-    <CheckBox
-        android:id="@+id/checkBox8"
-        android:layout_width="155dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="8dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/checkBox5"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />
-
-    <CheckBox
-        android:id="@+id/checkBox5"
-        android:layout_width="158dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/checkBox9"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox" />
-
-    <CheckBox
-        android:id="@+id/checkBox6"
-        android:layout_width="156dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="8dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/checkBox4"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />
-
-    <CheckBox
-        android:id="@+id/checkBox"
-        android:layout_width="155dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="20dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/textView73"
-        app:layout_constraintTop_toBottomOf="@+id/textView73" />
-
-    <CheckBox
-        android:id="@+id/checkBox2"
-        android:layout_width="151dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="24dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/textView75"
-        app:layout_constraintTop_toBottomOf="@+id/textView75" />
-
-    <CheckBox
-        android:id="@+id/checkBox10"
-        android:layout_width="153dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="24dp"
-        android:text="Übungsname"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/textView75"
-        app:layout_constraintTop_toBottomOf="@+id/textView75" />
+        layout="@layout/toolbar_2" />
 
     <TextView
         android:id="@+id/textView73"
         android:layout_width="335dp"
         android:layout_height="71dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="36dp"
         android:text='Hier Würde der Titel "Ubungen gegen ... " stehen'
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include15" />
 
     <TextView
         android:id="@+id/textView75"
         android:layout_width="294dp"
         android:layout_height="55dp"
-        android:layout_marginTop="108dp"
         android:text="Abgeschlossene Übungen"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/checkBox3"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
+        app:layout_constraintStart_toStartOf="@+id/linearLayout7"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout7"
+        android:layout_width="337dp"
+        android:layout_height="309dp"
+        android:layout_marginTop="1dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView73">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="46dp">
+
+            <CheckBox
+                android:id="@+id/checkBox3"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+            <CheckBox
+                android:id="@+id/checkBox4"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="0dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="46dp">
+
+            <CheckBox
+                android:id="@+id/checkBox5"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+            <CheckBox
+                android:id="@+id/checkBox6"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="0dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="44dp">
+
+            <CheckBox
+                android:id="@+id/checkBox7"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+            <CheckBox
+                android:id="@+id/checkBox8"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="0dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="46dp">
+
+            <CheckBox
+                android:id="@+id/checkBox9"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+            <CheckBox
+                android:id="@+id/checkBox10"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="0dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="48dp">
+
+            <CheckBox
+                android:id="@+id/checkBox21"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+            <CheckBox
+                android:id="@+id/checkBox22"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="0dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="48dp">
+
+            <CheckBox
+                android:id="@+id/checkBox25"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+            <CheckBox
+                android:id="@+id/checkBox24"
+                android:layout_width="155dp"
+                android:layout_height="45dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="0dp"
+                android:text="Übungsname"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+        </TableRow>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
