--- a/app/src/main/res/layout/activity_wiki.xml
+++ b/app/src/main/res/layout/activity_wiki.xml
@@ -7,11 +7,15 @@
 
     <include layout="@layout/toolbar_3" />
 
-    <include layout="@layout/toolbar_bottom" />
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_bottom" />
+
     <TextView
         android:id="@+id/textView73"
         android:layout_width="335dp"
         android:layout_height="42dp"
+        android:layout_marginTop="12dp"
         android:text="Thema wählen"
         android:textAlignment="viewStart"
         android:textColor="#000000"
@@ -20,7 +24,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.71"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="128dp" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <androidx.constraintlayout.widget.Barrier
         android:layout_width="wrap_content"
