refactor some activities

--- a/app/src/main/res/layout/activity_ubungen_1.xml
+++ b/app/src/main/res/layout/activity_ubungen_1.xml
@@ -8,8 +8,9 @@
     <include layout="@layout/toolbar_3" />
 
     <include
-        android:id="@+id/include16"
-        layout="@layout/toolbar_3" />
+        android:id="@+id/include5"
+        layout="@layout/toolbar_bottom" />
+
 
     <LinearLayout
         android:layout_width="354dp"
