--- a/app/src/main/res/layout/activiry_registrierung_2.xml
+++ b/app/src/main/res/layout/activiry_registrierung_2.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/include5"
-        layout="@layout/toolbar_3" />
+        layout="@layout/toolbar_bottom" />
 
     <LinearLayout
         android:id="@+id/linearLayout5"
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="63dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="20"
+            android:layout_marginBottom="20dp"
             android:text="Ihnen wurde ein Code per E-Mail gesendet. \nBitte geben Sie diesen hier ein um Ihre E-Mail zu bestätigen und den Account zu aktivieren"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/textView62"
@@ -84,8 +84,6 @@
             android:id="@+id/textView71"
             android:layout_width="74dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="0"
-            android:layout_marginBottom="0"
             android:layout_weight="1"
             android:text="Code erneut senden"
             android:textColor="#2196F3"
