--- a/app/src/main/res/layout/activity_tagesziel_1.xml
+++ b/app/src/main/res/layout/activity_tagesziel_1.xml
@@ -3,27 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Tagesziel">
 
     <include
         android:id="@+id/include"
         layout="@layout/toolbar_3" />
 
     <include
-        android:id="@+id/include2"
+        android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom" />
 
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="538dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginBottom="37dp"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.727"
+        app:layout_constraintHorizontal_bias="0.272"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include2">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <TextView
             android:id="@+id/textView88"
