--- a/app/src/main/res/layout/activity_ubungen_1.xml
+++ b/app/src/main/res/layout/activity_ubungen_1.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Ubungen">
 
     <include layout="@layout/toolbar_3" />
 
     <include
-        android:id="@+id/include5"
+        android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom" />
 
 
