--- a/app/src/main/res/layout/activity_ubungen_2.xml
+++ b/app/src/main/res/layout/activity_ubungen_2.xml
@@ -37,7 +37,7 @@
     <include layout="@layout/toolbar_3" />
 
     <include
-        android:id="@+id/include5"
+        android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom" />
 
     <TextView
