--- a/app/src/main/res/layout/activiry_registrierung_2.xml
+++ b/app/src/main/res/layout/activiry_registrierung_2.xml
@@ -9,7 +9,7 @@
     <include layout="@layout/toolbar_3" />
 
     <include
-        android:id="@+id/include5"
+        android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom" />
 
     <LinearLayout
@@ -21,7 +21,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include5"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.232">
 
         <TextView
@@ -32,7 +32,7 @@
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/include5" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <TextView
             android:id="@+id/textView7"
@@ -96,6 +96,7 @@
             android:layout_width="4dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="handleBestaetigen"
             android:text="Bestätigen"
             android:textColor="#2196F3"
             app:layout_constraintBottom_toBottomOf="parent"
