--- a/app/src/main/res/layout/activity_anmeldunf_erfolgreich.xml
+++ b/app/src/main/res/layout/activity_anmeldunf_erfolgreich.xml
@@ -3,29 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".AnmeldingErfolgreich">
 
     <include layout="@layout/toolbar_3" />
 
     <include
-        android:id="@+id/include22"
+        android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom" />
 
     <LinearLayout
         android:id="@+id/linearLayout6"
-        android:layout_width="319dp"
-        android:layout_height="113dp"
+        android:layout_width="333dp"
+        android:layout_height="154dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="193dp"
+        android:layout_marginEnd="45dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include22"
-        app:layout_constraintVertical_bias="0.479">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <TextView
             android:id="@+id/textView59"
-            android:layout_width="match_parent"
+            android:layout_width="267dp"
             android:layout_height="31dp"
             android:text="Anmeldung erfolgreich"
             android:textSize="20sp"
@@ -43,20 +44,15 @@
             app:layout_constraintEnd_toEndOf="@+id/textView65"
             app:layout_constraintStart_toStartOf="@+id/textView65"
             app:layout_constraintTop_toBottomOf="@+id/textView65" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="52dp"
-        android:layout_height="18dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
 
         <TextView
             android:id="@+id/textView94"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:layout_weight="1"
+            android:gravity="end"
+            android:onClick="handleWeiter"
             android:text="Weiter"
             android:textColor="#2196F3"
             app:layout_constraintEnd_toEndOf="@+id/textView66"
