--- a/app/src/main/res/layout/activity_registrierung_1.xml
+++ b/app/src/main/res/layout/activity_registrierung_1.xml
@@ -12,8 +12,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-<include
-    layout="@layout/toolbar_bottom"/>
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_bottom"
+        tools:layout_editor_absoluteY="60dp" />
 <!--    <androidx.appcompat.widget.Toolbar-->
 <!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
 <!--        xmlns:tools="http://schemas.android.com/tools"-->
@@ -78,13 +81,13 @@
         android:layout_width="236dp"
         android:layout_height="308dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="85dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_seite_toolbar5">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <TextView
             android:id="@+id/textView10"
